name:                part2
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENCE
author:              QFPL @ Data 61
maintainer:          sean.chalmers@data61.csiro.au
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  if impl(ghcjs -any)
    ghc-options:       -Wall -O2 -dedupe
    cpp-options:       -DGHCJS_BROWSER
  else
    ghc-options:       -Wall -O2

  exposed-modules:     Part2

  build-depends:       base >=4.9 && <4.10
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom >= 0.4 && < 0.5
                     , reflex-dom-datepicker == 0.0.1.*
                     , common == 0.1.*
                     , time == 1.6.*
                     , text >= 1.2 && < 1.3
                     , jsaddle
                     , ghcjs-dom
                     , lens
  hs-source-dirs:      src
  default-language:    Haskell2010

executable datepicker-embed
  if !impl(ghcjs -any)
    buildable: False
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , part2
  hs-source-dirs:      exe
  ghc-options:         -Wall -O2 -dedupe
  cpp-options:         -DGHCJS_BROWSER
  default-language:    Haskell2010
